@@ -1,5 +1,6 @@
 package sirttas.elementalcraft.pureore;
 
+import com.google.common.collect.Iterables;
 import it.unimi.dsi.fastutil.objects.Reference2ObjectArrayMap;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.locale.Language;
@@ -8,21 +9,24 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.Container;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.RecipeManager;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.common.crafting.StrictNBTIngredient;
+import net.neoforged.api.distmarker.Dist;
+import net.neoforged.api.distmarker.OnlyIn;
+import net.neoforged.neoforge.common.crafting.NBTIngredient;
 import sirttas.dpanvil.api.event.DataPackReloadCompleteEvent;
 import sirttas.elementalcraft.ElementalCraft;
 import sirttas.elementalcraft.ElementalCraftUtils;
 import sirttas.elementalcraft.api.ElementalCraftApi;
 import sirttas.elementalcraft.api.name.ECNames;
-import sirttas.elementalcraft.api.pureore.injector.AbstractPureOreRecipeInjector;
+import sirttas.elementalcraft.api.pureore.factory.IPureOreRecipeFactory;
 import sirttas.elementalcraft.color.ECColorHelper;
 import sirttas.elementalcraft.config.ECConfig;
 import sirttas.elementalcraft.item.ECItems;
 import sirttas.elementalcraft.nbt.NBTHelper;
+import sirttas.elementalcraft.pureore.injector.PureOreRecipeFactoryTypes;
 import sirttas.elementalcraft.pureore.loader.IPureOreLoader;
 import sirttas.elementalcraft.recipe.instrument.io.IPurifierRecipe;
 
@@ -37,6 +41,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class PureOreManager {
 
@@ -66,8 +71,10 @@ public class PureOreManager {
 				.orElse(null);
 	}
 
-	public static Collection<AbstractPureOreRecipeInjector<?, ? extends Recipe<?>>> getInjectors() {
-		return AbstractPureOreRecipeInjector.REGISTRY.getValues();
+	public static Collection<? extends IPureOreRecipeFactory<?, ? extends Recipe<?>>> createFactories(@Nonnull RecipeManager recipeManager) {
+		return PureOreRecipeFactoryTypes.REGISTRY.stream()
+				.map(t -> t.create(recipeManager))
+				.toList();
 	}
 
 	public Component getPureOreName(ItemStack stack) {
@@ -118,32 +125,39 @@ public class PureOreManager {
 	public void reload(DataPackReloadCompleteEvent event) { // TODO use OnDatapackSyncEvent
 		var start = Instant.now();
 		var recipeManager = event.getRecipeManager();
-		var injectors = getInjectors();
+		var factories = createFactories(recipeManager);
 		var registry = event.getRegistry();
 
 		ElementalCraftApi.LOGGER.info("Pure ore generation started.\n\r\tRecipe Types: {}",
-				() -> injectors.stream()
-						.map(AbstractPureOreRecipeInjector::toString)
+				() -> factories.stream()
+						.map(Object::toString)
 						.collect(Collectors.joining(", ")));
-		injectors.forEach(injector -> injector.init(recipeManager));
 		this.pureOres.clear();
-		ElementalCraft.PURE_ORE_LOADERS_MANAGER.getData().entrySet().stream()
-				.map(Map.Entry::getValue)
+		ElementalCraft.PURE_ORE_LOADERS_MANAGER.getData().values().stream()
 				.sorted(Comparator.comparingInt(IPureOreLoader::getOrder))
-				.forEach(l -> l.generate(registry, injectors).forEach(e -> this.pureOres.computeIfAbsent(e.getId(), i -> new Entry()).ores.put(l, e)));
+				.forEach(l -> l.generate(registry).forEach(e -> {
+					factories.forEach(factory -> addRecipes(e, factory, registry));
+					this.pureOres.computeIfAbsent(e.getId(), i -> new Entry()).ores.put(l, e);
+				}));
 
 		if (Boolean.TRUE.equals(ECConfig.COMMON.pureOreRecipeInjection.get())) {
-			ElementalCraftApi.LOGGER.info("Pure ore recipe injection.");
+			ElementalCraftApi.LOGGER.info("Building pure ore recipes.");
 			this.pureOres.values().removeIf(o -> !o.isProcessable());
 
 			var entries = pureOres.values().stream().distinct().toList();
 			var recipes = recipeManager.getRecipes().stream()
 					.filter(r -> !isPureOreRecipe(r))
-					.collect(Collectors.toList());
+					.toList();
 			var size = recipes.size();
 
-			injectors.forEach(injector -> inject(registry, injector, recipes, entries));
-			recipeManager.replaceRecipes(recipes);
+			var newRecipes = factories.stream()
+					.<RecipeHolder<?>>mapMulti((factory, downstream) -> build(registry, factory, entries)
+						.forEach(downstream))
+					.filter(ElementalCraftUtils.distinctBy(RecipeHolder::id))
+					.toList();
+
+			ElementalCraftApi.LOGGER.info("Injecting pure ore recipes.");
+			recipeManager.replaceRecipes(Iterables.concat(recipes, newRecipes));
 			ElementalCraftApi.LOGGER.info("Pure ore recipe injection finished. {} recipes added.", () -> recipeManager.getRecipes().size() - size);
 		}
 
@@ -154,31 +168,42 @@ public class PureOreManager {
 						.collect(Collectors.joining(", ")));
 	}
 
-	private boolean isPureOreRecipe(Recipe<?> recipe) {
-		var id = recipe.getId();
+	private static <C extends Container, T extends Recipe<C>> void addRecipes(PureOre ore, IPureOreRecipeFactory<C, T> factory, RegistryAccess registry) {
+		factory.getRecipes(ore.getOres()).forEach(h -> {
+			var recipe = h.value();
+
+			ore.addRecipe(recipe, factory.getRecipeOutput(registry, recipe));
+		});
+	}
+
+	private boolean isPureOreRecipe(RecipeHolder<?> holder) {
+		var id = holder.id();
 
 		return id.getNamespace().equals(ElementalCraftApi.MODID) && id.getPath().startsWith("pure_ore/");
 	}
 
-	private <C extends Container, T extends Recipe<C>> void inject(@Nonnull RegistryAccess registry, @Nonnull AbstractPureOreRecipeInjector<C, T> injector, @Nonnull Collection<Recipe<?>> recipes, @Nonnull List<Entry> entries) {
-		entries.stream()
+	private <C extends Container, T extends Recipe<C>> Stream<RecipeHolder<T>> build(@Nonnull RegistryAccess registry, @Nonnull IPureOreRecipeFactory<C, T> factory, @Nonnull List<Entry> entries) {
+		return entries.stream()
 				.distinct()
-				.<T>mapMulti((entry, downstream) -> entry.ores.values().forEach(v -> downstream.accept(this.injectEntry(registry, injector, v))))
-				.filter(Objects::nonNull)
-				.filter(ElementalCraftUtils.distinctBy(Recipe::getId))
-				.forEach(recipes::add);
+				.<RecipeHolder<T>>mapMulti((entry, downstream) -> entry.ores.values().forEach(v -> downstream.accept(this.buildEntry(registry, factory, v))))
+				.filter(Objects::nonNull);
 	}
 
-	private <C extends Container, T extends Recipe<C>> T injectEntry(@Nonnull RegistryAccess registry, @Nonnull AbstractPureOreRecipeInjector<C, T> injector, @Nonnull PureOre entry) {
-		RecipeType<T> recipeType = injector.getRecipeType();
+	private <C extends Container, T extends Recipe<C>> RecipeHolder<T> buildEntry(@Nonnull RegistryAccess registry, @Nonnull IPureOreRecipeFactory<C, T> factory, @Nonnull PureOre entry) {
+		RecipeType<T> recipeType = factory.getRecipeType();
 		try {
-			T recipe = entry.getRecipe(recipeType);
+			var recipe = entry.getRecipe(recipeType);
+			var id = entry.getId();
 
-			return recipe != null ? injector.build(registry, recipe, StrictNBTIngredient.of(createPureOre(entry.getId()))) : null;
+			return recipe != null ? new RecipeHolder<>(buildRecipeId(id), factory.create(registry, recipe, NBTIngredient.of(true, createPureOre(id)))) : null;
 		} catch (Exception e) {
-			ElementalCraftApi.LOGGER.error("Error in pure ore recipe injection", e);
+			ElementalCraftApi.LOGGER.error("Error building pure ore recipe", e);
 			return null;
 		}
+	}
+
+	private static ResourceLocation buildRecipeId(@Nonnull ResourceLocation source) {
+		return new ResourceLocation(ElementalCraftApi.MODID, "pure_ore/" + source.getNamespace() + "/" + source.getPath());
 	}
 
 	private static class Entry {
